move private info into dev.js

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 PORT = 8000
 DATABASE_LOCAL = 'mongodb://localhost:27017/auth_user'
 DATABASE_CLOUD = ''
-JWT_SECRET=1
+JWT_SECRET= 
