initialize Heroku deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NODE_ENV=development
-PORT = 8000
+NODE_ENV= 'development'
+
 DATABASE_LOCAL = 'mongodb://localhost:27017/auth_user'
-DATABASE_CLOUD = ''
-JWT_SECRET= 
+DATABASE_URL='mongodb+srv://jorge:Centaurus1C@cluster0-olb7y.mongodb.net/test?retryWrites=true&w=majority'
+HTTP_TIMEOUT=10000
