initialize Heroku deployment

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV= 'development'
+PORT = 8000
 
 DATABASE_LOCAL = 'mongodb://localhost:27017/auth_user'
 DATABASE_URL='mongodb+srv://jorge:Centaurus1C@cluster0-olb7y.mongodb.net/test?retryWrites=true&w=majority'
